--- a/views/dogs.handlebars
+++ b/views/dogs.handlebars
@@ -25,7 +25,7 @@
                     <h4 class="animal-name">{{this.name}}</h4>
                     <div class="card-info-animal">
                         <p class="card-info">{{this.age}}</p>
-                        <span class="info-divider"></span>
+                        <span class="info-divider">🐾</span>
                         <p class="card-info">{{this.gender}}</p>
                     </div>
                     <p class="card-info-location">{{this.distance}} Miles Away</p>
