--- a/public/style.css
+++ b/public/style.css
@@ -631,6 +631,17 @@ p {
 
 /* Individual Pet Page */
 
+.favorite-btn {
+  background-color: var(--primary);
+  color: white;
+  padding: 8px 12px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600px;
+  margin-bottom: 20px;
+}
+
 /* Slideshow container */
 .slideshow-container {
   width: 100%;
@@ -685,7 +696,7 @@ p {
   font-size: 16px;
   padding: 12px 16px;
   position: absolute;
-  top: 0;
+  top: 10px;
 }
 
 /* The dots/bullets/indicators */
