--- a/views/animalInfo.handlebars
+++ b/views/animalInfo.handlebars
@@ -36,7 +36,16 @@
             <p>{{animal.size}}</p>
         </div>
         {{#if isLoggedIn}}
-            <a class="favorite-btn" href="#">Add to Favorites</a>
+            {{#if isFavorite}}
+            <form action="/api/favorites/{{animal.id}}" method="POST" class="favorite-form">
+                <button type="submit" class="favorite-btn">Remove from Favorites</button>
+            </form>
+            {{else}} 
+            <form action="/api/favorites/{{animal.id}}?_method=DELETE" method="POST" class="favorite-form">
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit" class="favorite-btn">Add to Favorites</button>
+            </form>
+            {{/if}}
         {{/if}}
     </section>
     <nav class="animal-nav">
