--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,3 +1,16 @@
+
 <main>
-    
+    <h2>My Favorites</h2>
+    {{#if favorites}}
+        <ul>
+            {{#each favorites}}
+                <li>
+                    <h3>{{this.name}} ({{this.type}})</h3>
+                    <p>Age: {{this.age}}, Gender: {{this.gender}}, Size: {{this.size}}</p>
+                </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        <p>No favorites yet!</p>
+    {{/if}}
 </main>
