--- a/views/dogs.handlebars
+++ b/views/dogs.handlebars
@@ -13,6 +13,16 @@
         <div class="cards__container">
             {{#each dogs}}
             <a class="card" href="/pet/{{this.id}}">
+            {{#if isLoggedIn}}
+                <form action="/api/favorites/{{this.id}}{{#if this.isFavorite}}?_method=DELETE{{/if}}" method="POST" class="favorite-toggle">
+                    {{#if this.isFavorite}}
+                    <input type="hidden" name="_method" value="DELETE">
+                    <button type="submit" class="favorite-btn">💔 Unfavorite</button>
+                    {{else}}
+                    <button type="submit" class="favorite-btn">❤️ Favorite</button>
+                    {{/if}}
+                </form>
+            {{/if}}
                 <img src="
                     {{#if this.primary_photo_cropped}}
                         {{this.primary_photo_cropped.full}}
