--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,10 +9,12 @@
             <h3 class ="main__pet-adoption_title">Pets Available for Adoption</h3>
             <div class="main__pet__adoption-img_container">
                 <a class="main__cat_link" href="/cats">
-                    <img src="images/cat-button-orange.png" alt="cat-icon" class="main__link_img-cat" width="100"> 
+                    <img src="images/cat-icon-white.png" alt="cat-icon" class="main__link_img-cat">
+                    <h4>Cats</h4>
                 </a>
                 <a class="main__dog_link" href="/dogs">
-                    <img src="images/dog-button-orange.png" alt="dog-icon" class="main__link_img-dog" width="100">
+                    <img src="images/dog-icon-white.png" alt="dog-icon" class="main__link_img-dog">
+                    <h4>Dogs</h4>
                 </a>
             </div>
         </section>
@@ -32,33 +34,31 @@
         <section class="main__involved">
             <h3 class="main__involved-title">Get Involved</h3>
             <div class="main__involved_info-container flex">
-                <div class="main__involved_info-container_adopt">
-                    <img src="images/adopt.jpg" alt="photo of dog in a cage" class="main__involved_info_img" width="50px">
-                    <h4 class="main__involved_info_subtitle">Adopt</h4>
+                <a class="main__involved_info-container_adopt" href="https://wvs.org.uk/news/10-reasons-why-you-should-adopt-dont-shop/?utm_source=google&utm_medium=cpc&utm_campaign=20220009528&utm_term=&gad_source=1&gclid=EAIaIQobChMIo_HlofbAhQMV1KhaBR3OYg47EAAYAyAAEgIeafD_BwE" target="__BLANK">
+                    <div class="main__involved_info_title-container">                   <img src="images/house-icon.png" alt="photo of dog in a cage" class="main__involved_info_img">
+                        <h4 class="main__involved_info_subtitle">Adopt</h4>
+                    </div>
                     <p class="main__involved_info_text">Consider the benefits of adopting a pet: save lives, prevent overcrowding, and avoid euthanasia. Adopted pets often come vaccinated, spayed/neutered, and microchipped which saves time and money. Pets also reduce stress, combat loneliness, and promote an active lifestyle. Adoption gives these pets a fresh start and supports animal welfare organizations. Skip the pet store and offer a forever home to a lovable furball. It's a win-win for all!
                     </p>
-                    <a href="https://wvs.org.uk/news/10-reasons-why-you-should-adopt-dont-shop/?utm_source=google&utm_medium=cpc&utm_campaign=20220009528&utm_term=&gad_source=1&gclid=EAIaIQobChMIo_HlofbAhQMV1KhaBR3OYg47EAAYAyAAEgIeafD_BwE" class="main__involved_info_link" target="__BLANK">Explore more benefits of adoption here</a>
-                </div>
-                <div class="main__involved_info-container_foster">
-                    <img src="images/foster.jpg" alt="photo of cat high fiving someone" class="main__involved_info_img" width="50px">
-                    <h4 class="main__involved_info_subtitle">Foster</h4>
+                </a>
+                <a class="main__involved_info-container_foster" href="https://strayanimalfoundationindia.org/the-benefits-of-fostering-stray-animals/?gad_source=1&gclid=Cj0KCQjw2uiwBhCXARIsACMvIU0Y4HueNgb21T_uWLin9v2h49vPxBoJkqURoOaWHtUbbunHWflTJeEaAvlQEALw_wcB" target="_blank">
+                    <div class="main__involved_info_title-container">
+                        <img src="images/paw-icon.png" alt="photo of cat high fiving someone" class="main__involved_info_img">
+                        <h4 class="main__involved_info_subtitle">Foster</h4>
+                    </div>
                     <p class="main__involved_info_text">
                        Fostering stray animals is a compassionate way to save lives and experience pet ownership without a long-term commitment. By providing a temporary sanctuary, you'll be showering these animals with love and care, helping them recover and find their forever homes. Open your home and heart to a foster pet and make a difference in their lives while potentially finding a new furry best friend. 
                     </p>
-                    <a href="https://strayanimalfoundationindia.org/the-benefits-of-fostering-stray-animals/?gad_source=1&gclid=Cj0KCQjw2uiwBhCXARIsACMvIU0Y4HueNgb21T_uWLin9v2h49vPxBoJkqURoOaWHtUbbunHWflTJeEaAvlQEALw_wcB" class="main__involved_info_link" target="__BLANK">
-                        Explore more benefits of fostering here
-                    </a>
-                </div>
-                <div class="main__involved_info-container_volunteer">
-                    <img src="images/volunteer.jpg" alt="photo of dog with a toy" class="main__involved_info_img" width="50px">
-                    <h4 class="main__involved_info_subtitle">Volunteer</h4>
+                </a>
+                <a class="main__involved_info-container_volunteer" href="https://strayanimalfoundationindia.org/why-volunteering-is-essential-in-helping-stray-animals/?gad_source=1&gclid=Cj0KCQjw2uiwBhCXARIsACMvIU0c_21plt5125-wi2cpb8BCQrbaoaJUipg1Du7dnTf1RMkp8ozch1caAjA7EALw_wcB" target="_blank">
+                    <div class="main__involved_info_title-container">
+                        <img src="images/volunteer-icon.png" alt="photo of dog with a toy" class="main__involved_info_img">
+                        <h4 class="main__involved_info_subtitle">Volunteer</h4>
+                    </div>
                     <p class="main__involved_info_text">
                         Volunteering with animals is a journey full of surprises. Making a real impact on their lives by walking dogs, giving belly rubs, or simply spending time together brightens their day. It's therapeutic for you too, with animals lifting your spirits and filling you with warmth. You'll learn new skills, form connections, and join a community of animal lovers. If you have time and love to give, lend a paw and help the pets in need.
                     </p>
-                    <a href="https://strayanimalfoundationindia.org/why-volunteering-is-essential-in-helping-stray-animals/?gad_source=1&gclid=Cj0KCQjw2uiwBhCXARIsACMvIU0c_21plt5125-wi2cpb8BCQrbaoaJUipg1Du7dnTf1RMkp8ozch1caAjA7EALw_wcB" class="main__involved_info_link" target="__BLANK">
-                        Explore more benefits of volunteering here
-                    </a>
-                </div>
+                </a>
             </div>
         </section>
     </main>
